# HackUTD

./: .gitignore  FRONTEND_SETUP.md  INSTALL_FIRST.md  QUICKSTART.md  README.md  README_EMOTION_DETECTION.md  README_NEW.md  RUN_ME.md  SETUP.md  VOICE_SYSTEM_README.md  facial_sentiment.py  facial_sentiment_analyzer.py  install_all.sh  requirements.txt  run_emotion_detection.sh  setup_voice_transcription.sh  start_frontend.sh  test_camera.py
backend/: GRACEFUL_CALL_END.md  QUICK_START.md  SYSTEM_FLOW.md  app.py  face_detector_service.py  facial_sentiment_headless.py  launch_system.py  main.py  old_requirements.txt  recognize.py  register.py  requirements.txt  sales_call_analyzer.py  test_extraction_real.py  test_gemini_extraction.py  voice_transcription.py  voice_transcription_local.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
tmobile/: App.js  CUSTOMER_PROFILE_INTEGRATION.md  ConnectScreen.js  CustomerProfile.js  HomeScreen.js  NAVIGATION_GUIDE.md  QUICK_START_GUIDE.md  README.md  app.json  customerData.js  package-lock.json  package.json  start.sh
voxel-sdk-main/: .gitignore  LICENSE  README.md  pyproject.toml  terminal.py
voxel-sdk-main/voxel_sdk/: __init__.py  ble.py  commands.py  device_controller.py  serial.py  voxel.py
