[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxel-sdk"
version = "0.1.1"
description = "SDK for Voxel"
authors = [
    {name = "Physical Automation, Inc", email="contact@physical.inc"},
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
  "bleak>=0.22.0",
  "pyserial>=3.5",
  "opencv-python>=4.8.0",
  "numpy>=1.23.0",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/physicalinc/voxel-sdk"
Repository = "https://github.com/physicalinc/voxel-sdk"

[tool.hatch.build.targets.wheel]
packages = ["voxel_sdk"]

[project.optional-dependencies]
# Bluetooth Low Energy support
ble = [
  "bleak>=0.22.0",
]
# Wired serial support
serial = [
  "pyserial>=3.5",
]
# Local stream visualization (optional; heavier dependencies)
viz = [
  "opencv-python>=4.8.0",
  "numpy>=1.23.0",
]
# Convenience extra to install everything
all = [
  "bleak>=0.22.0",
  "pyserial>=3.5",
  "opencv-python>=4.8.0",
  "numpy>=1.23.0",
]